--- a/screech.yaml
+++ b/screech.yaml
@@ -1,6 +1,71 @@
-screen_width: 1280
-screen_height: 720
-emulators_dir: ./SDCARD/
+screen:
+  width: 1280
+  height: 720
+roms: SDCARD/
 screenscraper:
   username: my_username
   password: my_password
+  media:
+    type: box-3D
+    width: 400
+    height: 580
+    regions:
+      - br
+      - us
+      - ame
+      - wor
+  systems-ids: # the key should match the system name in roms folder
+    MSX2: "116" # MSX
+    N64: "14" # Nintendo 64
+    N64DD: "122" # Nintendo 64DD
+    NAOMI: "56" # Sega Naomi
+    NDS: "15" # NDS
+    NEOCD: "70" # Neo Geo CD
+    NEOGEO: "142" # Neo Geo AES
+    NGP: "25" # Neo Geo Pocket
+    NGC: "82" # Neo-geo Pocket Color
+    ODYSSEY: "104" # Videopac / Magnavox Odyssey 2
+    OPENBOR: "214" # OpenBOR
+    PALMOS: "219" # Palm
+    PANASONIC: "29" # 3DO
+    PCE: "31" # NEC TurboGrafx-16 / PC Engine
+    PCECD: "114" # NEC TurboGrafx-CD
+    PC88: "221" # NEC PC-8000 & PC-8800 series / NEC PC-8801
+    PCFX: "72" # NEC PC-FX
+    PC98: "208" # NEC PC-98 / NEC PC-9801
+    PICO: "234" # PICO
+    POKEMINI: "211" # PokeMini
+    PORTS: "137" # PC Win9X
+    PS: "57" # Sony Playstation
+    PSP: "61" # Sony PSP
+    PSPMINIS: "172" # Sony PSP Minis
+    SATURN: "22" # Sony PSP Minis
+    SATELLAVIEW: "107" # Satellaview
+    SCUMMVM: "123" # ScummVM
+    SEGACD: "20" # Sega CD
+    SG1000: "109" # Sega SG-1000
+    ATARI7800: "41" # Atari 7800
+    SFC: "4" # Super Nintendo (SNES)
+    SFCMSU: "4" # Super Nintendo (SNES) hacks
+    SGB: "127" # Super Game Boy
+    SFX: "105" # NEC PC Engine SuperGrafx
+    SUFAMI: "108" # Sufami Turbo
+    WS: "207" # Watara Supervision
+    WSC: "207" # Watara Supervision
+    SEGA32X: "19" # Sega 32X
+    THOMSON: "141" # Thomson
+    TIC: "222" # TIC-80
+    UZEBOX: "216" # Uzebox
+    VB: "11" # Virtual Boy
+    VECTREX: "102" # Vectrex
+    VIC20: "73" # Commodore VIC-20
+    VIDEOPAC: "104" # Videopac
+    VMU: "23" # Dreamcast VMU (useless)
+    X68000: "79" # Sharp X68000
+    X1: "220" # Sharp X1
+    ZXEIGHTYONE: "77" # Sinclair ZX-81
+    ZXS: "76" # Sinclair ZX Spectrum
+thumbnail:
+  width: 400
+  height: 580
+  dir: SDCARD/Imgs/$SYSTEM$/
