--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           go-version-file: go.mod
           cache: false
+
+      - name: Install SDL2
+        run: sudo apt install libsdl2{,-image,-mixer,-ttf,-gfx}-dev
+
       - name: Run linters
         uses: golangci/golangci-lint-action@v3
         with:
