use custom docker image

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,26 +7,23 @@ on:
 
 jobs:
   build-release:
-    name: Build assets
+    name: Build artifacts
     runs-on: ubuntu-latest
+    container:
+      image: anibaldeboni/trimui-smart-pro-toolchain:latest
+      env:
+        SS_DEV_ID: ${{ secrets.SS_DEV_ID }}
+        SS_DEV_PASSWORD: ${{ secrets.SS_DEV_PASSWORD }}
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
+        - name: Check out the repo
+          uses: actions/checkout@v2
 
-      - name: Run the build process with Docker
-        uses: addnab/docker-run-action@v3
-        env:
-          SS_DEV_ID: ${{ secrets.SS_DEV_ID }}
-          SS_DEV_PASSWORD: ${{ secrets.SS_DEV_PASSWORD }}
-        with:
-          image: anibaldeboni/trimui-smart-pro-toolchain:latest
-          options: -v ${{ github.workspace }}:/root/workspace
-          run: |
-            make
-            zip -r ScreechApp.zip Screech/
+        - name: Run the build process
+          run: make
 
-      - name: upload assets to release
-        uses: softprops/action-gh-release@v1
-        if: ${{startsWith(github.ref, 'refs/tags/') }}
-        with:
-          files: ./ScreechApp.zip
+        - name: upload assets to release
+          uses: softprops/action-gh-release@v1
+          if: ${{startsWith(github.ref, 'refs/tags/') }}
+          with:
+            files: ./dist/Screech/ScreechApp.zip
+        
