--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: write
+
 jobs:
   build-release:
     name: Build artifacts
@@ -23,6 +26,8 @@ jobs:
 
         - name: upload assets to release
           uses: softprops/action-gh-release@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           if: ${{startsWith(github.ref, 'refs/tags/') }}
           with:
             files: ./dist/Screech/ScreechApp.zip
