--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         - name: upload assets to release
           uses: softprops/action-gh-release@v1
           env:
-            GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           if: ${{startsWith(github.ref, 'refs/tags/') }}
           with:
             files: ./dist/Screech/ScreechApp.zip
