--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,5 +30,5 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           if: ${{startsWith(github.ref, 'refs/tags/') }}
           with:
-            files: ./dist/Screech/ScreechApp.zip
+            files: ./dist/ScreechApp.zip
         
