--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,14 +21,14 @@ jobs:
         - name: Check out the repo
           uses: actions/checkout@v2
 
-        - name: Run the build process
+        - name: Build package
           run: make
 
-        - name: upload assets to release
+        - name: Upload assets
           uses: softprops/action-gh-release@v1
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           if: ${{startsWith(github.ref, 'refs/tags/') }}
           with:
-            files: ./dist/ScreechApp.zip
+            files: ./ScreechApp/ScreechApp.zip
         
