feat: ignore skipped rom messages

--- a/includes/screech.yaml
+++ b/includes/screech.yaml
@@ -1,6 +1,7 @@
 roms: /mnt/SDCARD/Roms/ # Path to the roms folder
 logos: /mnt/SDCARD/Icons/Default/Logos # Path to the console logos folder, should contain PNG files
 max-scan-depth: 2 # Maximum number of subdirectories to scan for roms
+ignore-skipped-rom-message: true # Do not display a message when a rom is skipped
 exclude-extensions: # List of file extensions to exclude from the scan
   - ".cue"
   - ".m3u"
