bug: fix Atomiswave name in config

--- a/includes/screech.yaml
+++ b/includes/screech.yaml
@@ -60,7 +60,7 @@ systems:
     name: Atari ST
   - dir: ATOMISWAVE
     id: "53"
-    name: Atari ST
+    name: Atomiswave
   - dir: COLECO
     id: "183"
     name: Coleco
